<resources>
    <string name="app_name">Reminders</string>
    <string name="title_activity_reminders_maps">Map</string>
    <string name="title_activity_reminders_maps_json">Import Reminders</string>
    <string name="dialog_title">Location Permission Required</string>
    <string name="dialog_message">Location Permission is required to locate where you are.</string>
    <string name="dialog_allow">Allow</string>
    <string name="dialog_deny">Deny</string>
    <string name="toast_location_unavailable">Unable to get current location</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_import">Import Reminders</string>
    <string name="menu_export">Export Reminders</string>
    <string name="menu">Menu</string>
    <string name="search_title">Search here</string>
    <string name="title_activity_add_reminder">New Reminder</string>
    <string name="menu_edit_location">Edit Location</string>
    <string name="reminder_name">Name</string>
    <string name="reminder_description">Description</string>
    <string name="toast_name_not_set">Please set a name for your reminder.</string>
    <string name="title_activity_select_location_maps">Location Selection</string>
    <string name="edit_btn">Edit</string>
    <string name="dismiss_btn">Dismiss</string>
    <string name="toast_marker">Long press on the map to place a marker</string>
    <string name="title_activity_reminders_list">Reminders</string>
    <string name="title_activity_edit_reminders">Editing:\u0020</string>
    <string name="reminder_item_radius">Radius:\u0020</string>
    <string name="place_selection">Place:\u0020</string>
    <string name="place_selection_error">An error occurred:\u0020</string>
    <string name="geofence_success">Reminder geofences registered successfully.</string>
    <string name="geofence_fail">Failed to register reminder geofences.</string>
    <string name="geofence_enter">Entering:\u0020</string>
    <string name="geofence_triggered">Reminder Here</string>
    <string name="channel_name">Reminders</string>
    <string name="channel_desc">This channel is used to notify users of their reminders</string>
    <string name="clipboard_name">reminders</string>
    <string name="clipboard_reminders">Reminders have been copied to the clipboard</string>
    <string name="json_cancel">Cancel</string>
    <string name="json_add">Add</string>
    <string name="json_hint">Enter reminder json string</string>
    <string name="delimiter">///</string>
    <string name="json_error">Please enter some valid JSON text</string>
    <string name="geofence_remove_success">Reminder geofences removed successfully.</string>
    <string name="geofence_remove_fail">Failed to remove reminder geofences.</string>
    <string name="geofence_delimiter">,</string>
    <string name="geofence_entry">Geofence Entered</string>
    <string name="geofence_notification">Notification Sent</string>
    <string name="geofence_unavailable">Geofence not available</string>
    <string name="geofence_exceeded">Too many geofences</string>
    <string name="geofence_pendingintent">Too many pending intents</string>
    <string name="geofence_error">Geofence Error</string>
    <string name="geofence_createPending">Intent Called</string>
    <string name="geofence_error_adding_removing">Error adding/removing geofence : %s</string>
</resources>
