<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_reminders"
            android:title="@string/menu_reminders" />
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_file_import"
            android:title="@string/menu_import" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_file_export"
            android:title="@string/menu_export" />
    </group>
</menu>