<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.v7.widget.Toolbar
                            android:id="@+id/toolbar"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            android:background="@color/colorPrimary"
                            android:elevation="4dp"
                            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                            app:title="@string/title_activity_reminders_maps"/>

                        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:tools="http://schemas.android.com/tools"
                            android:id="@+id/map"
                            android:name="com.google.android.gms.maps.SupportMapFragment"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:context=".activity.RemindersMapsActivity"/>

                        <EditText
                            android:id="@+id/json_Et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/toolbar"
                            android:layout_margin="@dimen/fab_margin"
                            android:hint="@string/json_hint"
                            android:visibility="gone" />

                        <Button
                            android:id="@+id/cancel_btn"
                            android:backgroundTint="@color/colorPrimary"
                            android:layout_marginLeft="@dimen/fab_margin"
                            android:layout_below="@id/json_Et"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/json_cancel"
                            android:visibility="gone"/>

                        <Button
                            android:id="@+id/addReminder_btn"
                            android:backgroundTint="@color/colorPrimary"
                            android:layout_marginRight="@dimen/fab_margin"
                            android:layout_alignParentRight="true"
                            android:layout_below="@id/json_Et"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/json_add"
                            android:visibility="gone"/>

                    </RelativeLayout>

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/myLocation_fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/fab_margin"
                        android:onClick="myLocation"
                        android:src="@drawable/ic_my_location"
                        app:backgroundTint="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:rippleColor="@color/colorPrimaryDark" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/addReminder_fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/fab_margin"
                        android:onClick="addReminder"
                        android:src="@drawable/ic_add"
                        app:backgroundTint="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:rippleColor="@color/colorPrimaryDark" />
                </android.support.constraint.ConstraintLayout>
        </FrameLayout>
        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/drawer_view"
            app:headerLayout="@layout/nav_header"/>
</android.support.v4.widget.DrawerLayout>